CSS fixed to avoid wrapping lanes in all themes.

--- a/assets/stylesheets/version.css
+++ b/assets/stylesheets/version.css
@@ -31,6 +31,7 @@ li {
 }
 #div_screen_board {
   text-align: center;
+  clear: both;
 }
 
 .board {
